<resources>
    <string name="app_name">PopularMovies</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_sort_title">Sort By</string>

    <string name="pref_sort_key" translatable="false">sortalgo</string>
    <string name="pref_sort_default" translatable="false">popularity.desc</string>

    <string-array name="pref_list_titles">
        <item>Most Popular</item>
        <item>Highest Rated</item>
        <item>My Favourites</item>
    </string-array>
    <string-array name="pref_list_values">
        <item>popularity.desc</item>
        <item>vote_average.desc</item>
        <item>favourite</item>
    </string-array>
    <string name="overview">Overview</string>
    <string name="movie_title">Movie Title</string>
    <string name="rating">Rating</string>
    <string name="release_date">Release Date</string>
    <string name="trailers">Trailers:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="remove_fav">Remove From Favourites</string>
    <string name="favourite">Favourite</string>


</resources>
