<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@android:style/Widget.CompoundButton.Star"
    android:theme="@style/AppTheme"
    tools:context="com.udacitynanodegreeapps.android.popularmovies.DetailActivityFragment"
    tools:showIn="@layout/activity_detail">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/backdrop_imageview"
            android:scaleType="fitXY"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/movie_title"
            android:id="@+id/textView_title"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textAlignment="center"
            android:layout_alignParentTop="false"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:textColor="@color/secondary_text_default_material_dark" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="185dp"
            android:layout_height="185dp"
            android:id="@+id/detail_imageview"
            android:cropToPadding="false"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:adjustViewBounds="false"
            android:outlineProvider="background"
            android:padding="10dp"
            android:scaleType="fitXY" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/release_date"
            android:id="@+id/textView_date"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="false"
            android:layout_toRightOf="@+id/detail_imageview"
            android:padding="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/rating"
            android:id="@+id/textView_avgvote"
            android:layout_toRightOf="@+id/detail_imageview"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="false"
            android:layout_alignParentRight="true"
            android:padding="10dp" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chkbox_favourite"
            android:layout_toRightOf="@+id/detail_imageview"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:button="@android:drawable/btn_star_big_off"
            android:text="favourite"
            android:inputType="textCapWords" />


    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/overview"
        android:id="@+id/textView_overview"
        android:layout_margin="20dp"
        android:paddingTop="10dp"/>
    </ScrollView>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="25dp"
        android:background="@color/colorPrimaryDark" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/trailers"
            android:id="@+id/textView_trailer"
            android:layout_margin="20dp"
            android:paddingTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Trailer 1"
            android:id="@+id/textView_trailer_1"
            android:drawableLeft="@android:drawable/ic_media_play"
            android:layout_margin="20dp"
            android:paddingTop="10dp"
            android:clickable="true" />

    </LinearLayout>


</LinearLayout>
</ScrollView>